# react-with-node-and-c-

./: README.md  package.json
backend/: CMakeLists.txt
backend/include/: example.h
backend/src/: example.cpp:
frontend/components/: ExampleComponent.jsx:
frontend/pages/: index.js:
